--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 		<p id="cont_p"></p>
 		<script>
 			var oP=document.getElementById('cont_p');
-			var str='我是Mr.t，一个集美貌与智慧于一身的男子，我是一个搞程序的，干嘛还给我这么漂亮的脸蛋，明明可以靠脸吃饭，我偏不，我要靠我的才华。';
+			var str='诚挚的热爱前端，仿佛我们创造了另一个世界。过硬的HTML+CSS技能配合原生JS的熟练应用，在之前的工作中一个月不到就得心应手。对新知识的渴求，使我想在3年内成为“大牛”中的一员。热爱运功，喜欢交朋友，非常期待加入一个向上的团队。';
 			var iNow=-1;
 			var timer=null;
 			timer=setInterval(function(){
@@ -388,9 +388,9 @@
 
 			
 
-			<div class="col-md-6 edu-grid">
+			<div class="col-md-12 edu-grid">
 
-				<p>2011.9 - 2014.6</p><span>大专教育</span>
+				<p>2011.9 - 2014.7</p><span>大专教育</span>
 
 				<img src="images/arrow.png" alt=""/>
 
@@ -407,32 +407,6 @@
 					<div class="edu-grid-info">
 
 						<h5>这里学习了很多的课程，包括PhotoShop和Dreamweaver软件的使用，和C++，MySQL，ASP.NET等语言的学习，电子商务网站的建设与维护，物流知识等专业课程和一些高等教育的基础课程。参加了各种社团和志愿活动，锻炼了自己的交际能力和团队协作能力。</h5>
-
-					</div>
-
-				</div>
-
-			</div>
-
-			<div class="col-md-6 edu-grid">
-
-				<p>2016.4 - 2016.7</p><span>专业再学习</span>
-
-				<img src="images/arrow.png" alt=""/>
-
-				<div class="edu-border">
-
-					<div class="edu-grid-master">
-
-						<h3>课程：JavaScript，html5+css3</h3>
-
-						<h4>培训机构：智能社</h4>
-
-					</div>
-
-					<div class="edu-grid-info">
-
-						<h5>这里有从业最少5年的资深讲师，之前都是在大公司就业过，给我们讲解最新、最全、最实用的专业知识，学习课程深入浅出。主要的AJAX、jsonp、jQuery，html5和css3，学习了很多在学校和之前工作中没有学到的知识，受益匪浅。</h5>
 
 					</div>
 
@@ -472,19 +446,19 @@
 
 		<div class="work-grids">
 
-			<div class="col-md-4 w-grid">
+			<div class="col-md-6 w-grid">
 
 				<div class="work-grid">
 
-					<h3>2014.6-2015.1</h3>
+					<h3>2014.7-2015.1</h3>
 
 					<div class="work-grid-info">
 
 						<h4>北京中淘易企业服务有限公司</h4>
 
-						<h5>职务：店铺代运营</h5>
+						<h5>职务：运营助理</h5>
 
-						<p>主要职责：1.负责收集店铺每天的进出货数据，制定店铺的运营策略;2.负责店铺的微博、论坛、微信和QQ群推广等;</p>
+						<p>主要职责：1.负责淘宝或天猫店铺的店铺装修、图片美化和产品上下架;2.负责与店铺运营人员沟通好，做好店铺的商品结构调整或改版;3.◎负责该店铺的微信、微博、贴吧、QQ群、U站的推广工作。</p>
 
 					</div>
 
@@ -492,7 +466,7 @@
 
 			</div>
 
-			<div class="col-md-4 w-grid">
+			<div class="col-md-6 w-grid">
 
 				<div class="work-grid">
 
@@ -502,29 +476,9 @@
 
 						<h4>衡水迅驰计算机网络有限公司</h4>
 
-						<h5>职务：程序员</h5>
+						<h5>职务：前端开发</h5>
 
-						<p>主要职责：1.负责网站的效果图编码实现;2.主机，域名的购买和网站的上传;3.网站的后期维护和网站改版修改等;</p>
-
-					</div>
-
-				</div>
-
-			</div>
-
-			<div class="col-md-4 w-grid">
-
-				<div class="work-grid">
-
-					<h3>2016.4 - Now</h3>
-
-					<div class="work-grid-info">
-
-						<h4>智能社</h4>
-
-						<h5>职务：学员</h5>
-
-						<p>主要职责：1.努力学习，吸收老师讲过的内容，加强练习，使知识更加牢固;</p>
+						<p>主要职责：1.	负责设计图的代码实现，保证良好的浏览器兼容性（IE7+），包括手机端和APP开发；2.	负责与后台人员协作，完成操作交互、数据展现；3.	负责整个项目的上传和后期维护（包括改版）等;</p>
 
 					</div>
 
@@ -1002,17 +956,17 @@
 
 				<ul>
 
-					<li>姓名：Mr.t</li>
+					<li>姓名：田雨</li>
 
-					<li>年龄：23</li>
+					<li>年龄：23岁</li>
 
-					<li>手机：15512655055</li>
-					<li>备用联系手机：18700000000(杨女士)</li>
+					<li>手机：135-2119-6963</li>
+					<li>备用联系手机：18301500957(杨女士)</li>
 
 					<li>QQ：1358318426</li>
 					<li>微信：ty1358318426</li>
 
-					<li><a href="mailto:1358318426@qq.com">1358318426@qq.com</a></li>
+					<li><a href="mailto:tianyu_2016@sina.com">tianyu_2016@sina.com</a></li>
 
 					
 
