--- a/index.html
+++ b/index.html
@@ -911,11 +911,9 @@
 
 		</div>
 
-		<div class="contact-grids col-xs-offset-5">
+		<div class="contact-grids col-xs-12">
 
-			<div class="col-md-7 contact-left">
-
-				<h3>欢迎您联系我！</h3>
+			<div class="col-md-12 contact-left">
 
 				
 
