--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 
 
-	<title>个人网站展示</title>
+	<title>个人网站展示-Rain</title>
 
 	<!--fonts-->
 
@@ -328,7 +328,7 @@
 
 									];
 
-								for (var i = 1; i <= 7; i++) {
+								for (var i = 1; i <= 6; i++) {
 
 									var child = document.getElementById('circles-' + i),
 
