首页文案修改

--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 
 				<h3>HTML5和CSS3</h3>
 
-				<p>HTML5和CSS3的技术在当下是非常流行的，我掌握了这项技术，能为您迅速赶上时代潮流。</p>
+				<p>HTML5和CSS3的技术在当下是非常流行的，我能为您迅速赶上时代潮流。</p>
 
 			</div>
 
