--- a/index.html
+++ b/index.html
@@ -112,23 +112,16 @@
                                 <div class="menu_box_list">
 
                                     <ul>
-
                                         <li><a class="scroll" href="#home"><span>网站首页</span></a></li>
-
                                         <li><a class="scroll" href="#introduce"><span>自我介绍</span></a></li>
                                         <li><a class="scroll" href="#skill"><span>我的技能</span></a></li>
                                         <li><a class="scroll" href="#education"><span>教育背景</span></a></li>
                                         <li><a class="scroll" href="#experience"><span>工作经历</span></a></li>
                                         <li><a class="scroll" href="#advantage"><span>个人优势</span></a></li>
-
                                         <li><a class="scroll" href="#works"><span>作品集</span></a></li>
-
                                         <li><a class="scroll" href="#blog"><span>上线作品</span></a></li>
-
                                         <li><a class="scroll" href="#contact"><span>联系方式</span></a></li>
-
                                         <div class="clearfix"></div>
-
                                     </ul>
 
                                 </div>
@@ -206,7 +199,7 @@
 
             <div class="banner-right">
 
-                <h1>我是田雨</h1>
+                <h1>我是田雨111</h1>
 
                 <div class="border"></div>
 
@@ -944,7 +937,7 @@
                 <ul>
                     <li>姓名：田雨</li>
                     <li>年龄：23岁</li>
-                    <li>手机：135-2119-6963  或 155-1265-5055</li>
+                    <li>手机：135-2119-6963 或 155-1265-5055</li>
                     <li>QQ：1358318426</li>
                     <li>微信：ty1358318426</li>
                     <li><a href="mailto:tianyu_2016@sina.com">tianyu_2016@sina.com</a></li>
