修改上线案例

--- a/index.html
+++ b/index.html
@@ -199,14 +199,13 @@
 
             <div class="banner-right">
 
-                <h1>我是田雨222</h1>
+                <h1>我是田雨</h1>
 
                 <div class="border"></div>
 
                 <h2>一名优秀的前端开发人员</h2>
 
                 <a href="#">欢迎来到我的个人网站</a>
-
             </div>
 
             <div class="clearfix"></div>
@@ -499,7 +498,7 @@
                         <h5>职务：前端开发</h5>
 
                         <p>主要职责：1. 负责公司产品的客户私人定制化开发；2.负责与后台人员协作，完成操作交互、数据展现；3.
-                            负责整个项目的上传和后期维护（包括改版）等;</p>
+                            负责整个项目的上传和后期维护等;</p>
 
                     </div>
 
@@ -593,7 +592,7 @@
 
         <div class="strip text-center"><img src="images/port.png" alt=" "/></div>
 
-        <p>出来混“江湖”有句话很出名--光说不练假把式，光练不说傻把式。我可不是光说说我会什么，拿出点效果让你瞧瞧，这些我都会，你才相信我，更有说服力。</p>
+        <p class="works-head">出来混“江湖”有句话很出名--光说不练假把式，光练不说傻把式。我可不是光说说我会什么，拿出点效果让你瞧瞧，这些我都会，你才相信我，更有说服力。</p>
 
         <div class="gallery-grids">
 
@@ -609,7 +608,7 @@
 
                             <p>拖拽,运动框架</p>
 
-                            <div class="button"><a href="photowall.html" target="_blank" class="swipebox">详情++</a></div>
+                            <div class="button"><a href="demo/photowall.html" target="_blank" class="swipebox">详情++</a></div>
 
                         </div>
                     </a>
@@ -626,7 +625,7 @@
 
                             <p>运动框架,sea.js</p>
 
-                            <div class="button"><a href="jdslider.html" target="_blank" class="swipebox">详情++</a></div>
+                            <div class="button"><a href="demo/jdslider.html" target="_blank" class="swipebox">详情++</a></div>
 
                         </div>
                     </a>
@@ -643,7 +642,7 @@
 
                             <p>运动框架</p>
 
-                            <div class="button"><a href="accordion.html" target="_blank" class="swipebox">详情++</a></div>
+                            <div class="button"><a href="demo/accordion.html" target="_blank" class="swipebox">详情++</a></div>
 
                         </div>
                     </a>
@@ -660,7 +659,7 @@
 
                             <p>运动框架</p>
 
-                            <div class="button"><a href="wfgd.html" target="_blank" class="swipebox">详情++</a></div>
+                            <div class="button"><a href="demo/wfgd.html" target="_blank" class="swipebox">详情++</a></div>
 
                         </div>
                     </a>
@@ -677,7 +676,7 @@
 
                             <p>jsonp</p>
 
-                            <div class="button"><a href="baiduss.html" target="_blank" class="swipebox">详情++</a></div>
+                            <div class="button"><a href="demo/baiduss.html" target="_blank" class="swipebox">详情++</a></div>
 
                         </div>
                     </a>
@@ -694,7 +693,7 @@
 
                             <p></p>
 
-                            <div class="button"><a href="iloveyou.html" target="_blank" class="swipebox">详情++</a></div>
+                            <div class="button"><a href="demo/iloveyou.html" target="_blank" class="swipebox">详情++</a></div>
 
                         </div>
                     </a>
@@ -747,163 +746,40 @@
 
         <div class="blog-grids">
 
-            <div class="col-md-4 blog-text-info">
-
+            <div class="col-md-4 col-sm-12 work-grids">
                 <div class="blog-grid">
-
-                    <a href="http://www.aphaozhan.com"><img src="images/aphaozhan_sl.png" alt=""/></a>
-
+                    <a href="http://chongkongxiyinban.com" target="_blank"><img src="images/chongkongxiyinban_sl.png" alt=""/></a>
                     <div class="blog-text">
-
-                        <a href="http://www.aphaozhan.com" target="_blank">河北浩展丝网厂</a>
-
-                        <div class="stripa"></div>
-
-                        <p>河北浩展丝网厂是一家专业制造新钢护栏的厂家。本人设计制作的该厂的官方网站，主要应用了选项卡，表单的提交，后台的交互。</p>
-
-                    </div>
-
-                </div>
-
-            </div>
-
-            <div class="col-md-4 blog-text-info">
-
-                <div class="blog-grid">
-
-                    <a href="http://chongkongxiyinban.com" target="_blank"><img src="images/chongkongxiyinban_sl.png"
-                                                                                alt=""/></a>
-
-                    <div class="blog-text">
-
                         <a href="http://chongkongxiyinban.com">河北润吉金属制品有限公司</a>
-
                         <div class="stripa"></div>
-
-                        <p>河北润吉金属制品有限公司一家专业制造新钢护栏的厂家。本人制作的该厂的官方网站，主要应用了选项卡，表单的提交，后台的交互。</p>
-
+                        <p>河北润吉金属制品有限公司一家专业制造新钢护栏的厂家。本人制作的该厂的官方网站，主要应用了选项卡，表单的提交，后台的交互。该网站是我的早期作品，后台是PHP的。</p>
                     </div>
-
-
                 </div>
-
             </div>
 
-            <div class="col-md-4 blog-text-info">
-
+            <div class="col-md-4 col-sm-12 work-grids">
                 <div class="blog-grid">
-
-                    <a href="chttp://www.apyousu.com" target="_blank"><img src="images/apyousu_sl.png" alt=""/></a>
-
+                    <a href="https://mp.weixin.qq.com/s/Otn_hYC6WUa-RY7idp491w" target="_blank"><img src="images/kidsland.jpg" alt=""/></a>
                     <div class="blog-text">
-
-                        <a href="http://www.apyousu.com" target="_blank">河北优塑装饰材料有限公司</a>
-
+                        <a href="https://mp.weixin.qq.com/s/Otn_hYC6WUa-RY7idp491w">kidsland(孩思乐)特卖会</a>
                         <div class="stripa"></div>
-
-                        <p>河北优塑装饰材料有限公司一家专业制造新钢护栏的厂家。本人制作的该厂的官方网站，主要应用了选项卡，表单的提交，后台的交互。</p>
-
+                        <p>kidsland特卖会，是针对公司内部，或者部分企业内部实行的特价商品的购买平台，不定期发布产品，参加活动。这是一个微信商城。微信号：kidslandchina，</p>
                     </div>
-
                 </div>
-
             </div>
 
-            <!-- <div class="col-md-4 blog-text-info">
-
+            <div class="col-md-4 col-sm-12 work-grids">
                 <div class="blog-grid">
-
-                    <a href="single.html" target="_blank"><img src="images/a.jpg" alt=""/></a>
-
+                    <a href="http://oms.xdoao.cn/oms/login" target="_blank"><img src="images/xdoaoERP.png" alt=""/></a>
                     <div class="blog-text">
-
-                        <a href="single.html">安平县森喆丝网有限公司</a>
-
+                        <a href="http://oms.xdoao.cn/oms/login">兴道ERP系统</a>
                         <div class="stripa"></div>
-
-                        <p>安平县森喆丝网有限公司一家专业制造新钢护栏的厂家。本人制作的该厂的官方网站，主要应用了选项卡，表单的提交，后台的交互。</p>
-
+                        <p>兴道ERP系统是进销存的一个后台系统。前端全部由我完成。<br/>
+                            用户名：admin<br/>
+                            密码：123456</p>
                     </div>
-
-
-
-
-
-                    <div class="blog-pos">
-
-                        <p>5<span>May</span></p>
-
-                    </div>
-
                 </div>
-
             </div>
-
-            <div class="col-md-4 blog-text-info">
-
-                <div class="blog-grid">
-
-                    <a href="single.html"><img src="images/b.jpg" alt=""/></a>
-
-                    <div class="blog-text">
-
-                        <a href="single.html">衡水迅驰计算机网络有限公司官网</a>
-
-                        <div class="stripa"></div>
-
-                        <p>Your bones don't break, mine do. That's clear. Your cells react to bacteria
-
-                        and viruses differently than mine. You don't get sick, I do.</p>
-
-                    </div>
-
-
-
-
-
-
-
-                </div>
-
-            </div>
-
-            <div class="col-md-4 blog-text-info">
-
-                <div class="blog-grid">
-
-                    <a href="single.html"><img src="images/c.jpg" alt=""/></a>
-
-                    <div class="blog-text">
-
-                        <a href="single.html">xxxxxxxxxxx</a>
-
-                        <div class="stripa"></div>
-
-                        <p>Your bones don't break, mine do. That's clear. Your cells react to bacteria
-
-                        and viruses differently than mine. You don't get sick, I do.</p>
-
-                    </div>
-
-
-
-                    <div class="blog-para">
-
-                            <ul>
-
-                                <li><a href="#">3 Comments</a></li>
-
-                                <li><a href="#">8 Share</a></li>
-
-                            </ul>
-
-                    </div>
-
-
-
-                </div>
-
-            </div> -->
 
             <div class="clearfix"></div>
 
