--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
                 <div class="circle" id="circles-3"></div>
 
-                <p>Dreamweaver</p>
+                <p>WebStorm</p>
 
             </div>
 
@@ -497,8 +497,11 @@
 
                         <h5>职务：前端开发</h5>
 
-                        <p>主要职责：1. 负责公司产品的客户私人定制化开发；2.负责与后台人员协作，完成操作交互、数据展现；3.
-                            负责整个项目的上传和后期维护等;</p>
+                        <p>主要职责：◎开发前和产品详细了解产品功能需求，选择相应的技术和插件；
+                            ◎负责根据原型图和效果图实现静态页面；
+                            ◎负责和后台协调数据结构，调试接口，渲染数据。
+                            ◎负责制定前端项目的规范，技术文档的记录。
+                            ◎负责项目上线后的需求和bug的维护。</p>
 
                     </div>
 
@@ -843,7 +846,7 @@
 
     <div class="container">
 
-        <p>Copyright &copy; 2016 Mr.t</p>
+        <p>Copyright &copy; 2016 Mr.tian</p>
 
     </div>
 
