--- a/index.html
+++ b/index.html
@@ -759,11 +759,11 @@
 
             <div class="col-md-4 col-sm-12 work-grids">
                 <div class="blog-grid">
-                    <a href="https://mp.weixin.qq.com/s/Otn_hYC6WUa-RY7idp491w" target="_blank"><img src="images/kidsland.jpg" alt=""/></a>
+                    <a href="./cases/kidsland_wx.html" target="_blank"><img src="images/kidsland.jpg" alt=""/></a>
                     <div class="blog-text">
-                        <a href="https://mp.weixin.qq.com/s/Otn_hYC6WUa-RY7idp491w">kidsland(孩思乐)特卖会</a>
+                        <a href="./cases/kidsland_wx.html" target="_blank">kidsland(孩思乐)特卖会</a>
                         <div class="stripa"></div>
-                        <p>kidsland特卖会，是针对公司内部，或者部分企业内部实行的特价商品的购买平台，不定期发布产品，参加活动。这是一个微信商城。微信号：kidslandchina，</p>
+                        <p>kidsland特卖会，是针对公司内部，或者部分企业内部实行的特价商品的购买平台，不定期发布产品，参加活动。这是一个微信商城。<a href="./cases/kidsland_wx.html" target="_blank">预览</a>  微信号：kidslandchina</p>
                     </div>
                 </div>
             </div>
@@ -774,7 +774,7 @@
                     <div class="blog-text">
                         <a href="http://oms.xdoao.cn/oms/login">兴道ERP系统</a>
                         <div class="stripa"></div>
-                        <p>兴道ERP系统是进销存的一个后台系统。前端全部由我完成。<br/>
+                        <p>兴道ERP系统是进销存的一个后台系统。前端全部由我完成。主要应用了echarts数据可视化，H+框架，jGrid，select2，layer等插件。<a href="http://oms.xdoao.cn/oms/login" target="_blank">预览</a><br/>
                             用户名：admin<br/>
                             密码：123456</p>
                     </div>
