--- a/index.html
+++ b/index.html
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-
-
     <title>个人网站展示-Rain</title>
-
     <!--fonts-->
-
     <!-- <link href='http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900' rel='stylesheet' type='text/css'>
-
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'> -->
-
     <!--//fonts-->
     <link rel="icon" type="image/x-icon" class="js-site-favicon" href="https://assets-cdn.github.com/favicon.ico">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all"/>
-
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
     <link href="css/basics.css" rel="stylesheet" type="text/css" media="all"/>
 
@@ -608,7 +599,8 @@
 
                             <p>拖拽,运动框架</p>
 
-                            <div class="button"><a href="demo/photowall.html" target="_blank" class="swipebox">详情++</a></div>
+                            <div class="button"><a href="demo/photowall.html" target="_blank" class="swipebox">详情++</a>
+                            </div>
 
                         </div>
                     </a>
@@ -625,7 +617,8 @@
 
                             <p>运动框架,sea.js</p>
 
-                            <div class="button"><a href="demo/jdslider.html" target="_blank" class="swipebox">详情++</a></div>
+                            <div class="button"><a href="demo/jdslider.html" target="_blank" class="swipebox">详情++</a>
+                            </div>
 
                         </div>
                     </a>
@@ -642,7 +635,8 @@
 
                             <p>运动框架</p>
 
-                            <div class="button"><a href="demo/accordion.html" target="_blank" class="swipebox">详情++</a></div>
+                            <div class="button"><a href="demo/accordion.html" target="_blank" class="swipebox">详情++</a>
+                            </div>
 
                         </div>
                     </a>
@@ -676,7 +670,8 @@
 
                             <p>jsonp</p>
 
-                            <div class="button"><a href="demo/baiduss.html" target="_blank" class="swipebox">详情++</a></div>
+                            <div class="button"><a href="demo/baiduss.html" target="_blank" class="swipebox">详情++</a>
+                            </div>
 
                         </div>
                     </a>
@@ -693,7 +688,8 @@
 
                             <p></p>
 
-                            <div class="button"><a href="demo/iloveyou.html" target="_blank" class="swipebox">详情++</a></div>
+                            <div class="button"><a href="demo/iloveyou.html" target="_blank" class="swipebox">详情++</a>
+                            </div>
 
                         </div>
                     </a>
@@ -748,7 +744,8 @@
 
             <div class="col-md-4 col-sm-12 work-grids">
                 <div class="blog-grid">
-                    <a href="http://chongkongxiyinban.com" target="_blank"><img src="images/chongkongxiyinban_sl.png" alt=""/></a>
+                    <a href="http://chongkongxiyinban.com" target="_blank"><img src="images/chongkongxiyinban_sl.png"
+                                                                                alt=""/></a>
                     <div class="blog-text">
                         <a href="http://chongkongxiyinban.com">河北润吉金属制品有限公司</a>
                         <div class="stripa"></div>
@@ -763,7 +760,8 @@
                     <div class="blog-text">
                         <a href="./cases/kidsland_wx.html" target="_blank">kidsland(孩思乐)特卖会</a>
                         <div class="stripa"></div>
-                        <p>kidsland特卖会，是针对公司内部，或者部分企业内部实行的特价商品的购买平台，不定期发布产品，参加活动。这是一个微信商城。<a href="./cases/kidsland_wx.html" target="_blank">预览</a>  微信号：kidslandchina</p>
+                        <p>kidsland特卖会，是针对公司内部，或者部分企业内部实行的特价商品的购买平台，不定期发布产品，参加活动。这是一个微信商城。<a
+                                href="./cases/kidsland_wx.html" target="_blank">预览</a> 微信号：kidslandchina</p>
                     </div>
                 </div>
             </div>
@@ -774,7 +772,8 @@
                     <div class="blog-text">
                         <a href="http://oms.xdoao.cn/oms/login">兴道ERP系统</a>
                         <div class="stripa"></div>
-                        <p>兴道ERP系统是进销存的一个后台系统。前端全部由我完成。主要应用了echarts数据可视化，H+框架，jGrid，select2，layer等插件。<a href="http://oms.xdoao.cn/oms/login" target="_blank">预览</a><br/>
+                        <p>兴道ERP系统是进销存的一个后台系统。前端全部由我完成。主要应用了echarts数据可视化，H+框架，jGrid，select2，layer等插件。<a
+                                href="http://oms.xdoao.cn/oms/login" target="_blank">预览</a><br/>
                             用户名：admin<br/>
                             密码：123456</p>
                     </div>
